--- a/api/website/pages/devguild.ejs
+++ b/api/website/pages/devguild.ejs
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="<%= base %>/astyle.css">
+        <link rel="stylesheet" href="<%= base %>/<%= dev ? "a" : "" %>style.css">
         <script>
+            var isPremium = <%= premium %>
             function buildObject() {
                 var obj = {
                     "antighostping": false,
@@ -47,9 +48,11 @@
                     react: document.getElementById("censor-react").checked || false,
                 };
                 obj.log      = document.getElementById("log").value;
+                if (obj.log == "null") obj.log = null
                 obj.role     = document.getElementById("role").value;
                 if(obj.role == "null") obj.role = null;
                 obj.filter   = [...document.getElementById("filter").children].map(x=>x.value);
+                obj.uncensor = [...document.getElementById("uncensor").children].map(x=>x.value);
                 obj.antighostping = document.getElementById("agp").checked || false
                 obj.pop_delete    = ["", 0, undefined].includes(document.getElementById("poptime").value) ? null : document.getElementById("poptime").value * 1000;
                 var msgtype = document.getElementById("msgtype").value;
@@ -149,12 +152,40 @@
                 document.getElementById("channels").innerHTML = "";
                 causeChange()
             }
+            
+            function addToUncensor() {
+                var newWord = document.getElementById("uncensorin").value;
+                if(!newWord) return;
+                if(newWord.match(/[^a-zA-Z0-9 ]/gi)) return alert("Illegal character. Make sure to only use letters");
+                
+                let newDom = document.createElement("option");
+                newDom.value = newWord;
+                newDom.innerText = newWord;
+                
+                document.getElementById("uncensor").appendChild(newDom);
+                
+                document.getElementById("uncensorin").value = "";
+                causeChange();
+            }
+            function removeUncensor() {
+                var wordToRemove = document.getElementById("uncensor").value;
+                document.getElementById("uncensor")
+                    .removeChild(
+                        [...document.getElementById("uncensor")]
+                            .find(function(x) { return x.value == wordToRemove })
+                    );
+                if(wordToRemove) causeChange();
+            }
+            function clearUncensor() {
+                document.getElementById("uncensor").innerHTML = "";
+                causeChange();
+            }
         </script>
         <title>Dashboard - <%= data.name %></title>
     </head>
     <body style="background-color: #2C2F33">
         <div class="box">
-        <h1 class="name servername" style="grid-area: servername"><%= data.name %></h1>
+        <h1 class="name servername" style="grid-area: servername"><%= data.name %><% if(premium) { %> <img title="Premium" class="premb" src="/premium.png" width="30"> <% } %></h1>
             <div class="setting" style="grid-area: base-filter">
                 <h3 class="name">Base Filter</h3>
                 <label class="switch"><input type="checkbox" id="base" <%= data.db.base ? "checked" : "" %>><span class="slider round"></span></label>
@@ -162,12 +193,13 @@
             <div class="setting" style="grid-area: logchannel">
                 <h3 class="name">Log Channel</h3>
                     <select id="log">
+                        <option value="null">None</option>
                         <% data.c.forEach(channel=>{ %>
                             <option value="<%= channel.id %>">#<%=channel.name%></option>
                         <% }) %>
                     </select>
             </div>
-            <div class="setting" style="grid-area: uncensor">
+            <div class="setting" style="grid-area: role">
                 <h3 class="name">Uncensor Role</h3>
                     <select id="role">
                         <option value="null">None</option>
@@ -217,14 +249,17 @@
                 
             <div class="setting" style="grid-area: popmsg">
                 <h3 class="name">Pop message</h3>
-                <div class="checks"><h5>Seconds until delete</h5> <input type="number" min="0" max="120" placeholder="Never" id="poptime" value="<%= data.db.pop_delete / 1000%>"></div>
+                <div class="checks"><h5>Seconds until delete</h5> <input type="number" min="0" max="<%= premium ? "600" : "120" %>" placeholder="Never" id="poptime" value="<%= data.db.pop_delete / 1000%>"></div>
                 <script>
                     document.getElementById("poptime").onchange = function() {
                         if(document.getElementById("poptime").value == 0) {
                             document.getElementById("poptime").value = "";
                         }
-                        if(document.getElementById("poptime").value > 120) {
+                        if(!premium && document.getElementById("poptime").value > 120) {
                             document.getElementById("poptime").value = 120;
+                        }
+                        if(premium && document.getElementById("poptime").value > 600) {
+                            document.getElementById("poptime").value = 600;
                         }
                     }
                     document.getElementById("poptime").onchange()
@@ -240,7 +275,7 @@
                     <script>
                         document.getElementById("msgtype").value = "<%= data.db.msg === null ? "1" : data.db.msg === false ? "2" : "3" %>"
                         <% if(data.db.msg) { %>
-                            document.getElementById("custommsg").value = "<%=data.db.msg%>"
+                            document.getElementById("custommsg").value = "<%= data.db.msg %>"
                         <% } %>
                         function chngMSG() {
                             if(document.getElementById("msgtype").value == 3) {
@@ -258,7 +293,7 @@
             <!--premium-->
             <div class="setting premium" style="grid-area: resend">
                 <h3 class="name"> Resend <img title="Premium" class="premb" src="/premium.png" width="30"></h3>
-                <label class="switch"><input type="checkbox" class="prem" id="resend" <%= data.db.webhook ? "checked" : "" %>><span class="slider round"></span></label>
+                <label class="switch" id="reslabel"><input type="checkbox" class="prem" id="resend" <%= data.db.webhook ? "checked" : "" %> <%= premium ? "" : "disabled"%>><span class="slider round"></span></label>
             </div>
             <div class="setting premium" style="grid-area: channels">
                 <h3 class="name"> Ignore Channels <img title="Premium" class="premb" src="/premium.png" width="30"></h3>
@@ -267,15 +302,31 @@
                         <option value="<%= channel.name %> <%= channel.id %>">#<%=channel.name%></option>
                     <% }) %>
                 </select>
-                <button class="sb prem" onclick="addToChannels()">Add</button><div></div>
+                <button class="sb prem" onclick="<%= premium ? "addToChannels()" : "premError()" %>">Add</button><div></div>
                 <select id="channels">
                     <% data.db.channels.forEach(channel => { %>
                         <% const chan = data.c.find(x => x.id === channel) %>
                         <option value="<%= channel %>">#<%= chan ? chan.name : "error" %></option>
                     <% }) %>
                 </select>
-                <button class="sb prem" onclick="removeChannel()">Remove</button>
-                <button class="sb prem" onclick="clearChannels()">Clear</button>
+                <button class="sb prem" onclick="<%= premium ? "removeChannel()" : "premError()" %>">Remove</button>
+                <button class="sb prem" onclick="<%= premium ? "clearChannels()" : "premError()" %>">Clear</button>
+            </div>
+            <div class="setting" style="grid-area: uncensor">
+                <h3 class="name">Uncensor words</h3>
+                <input id="uncensorin" placeholder="Add to uncensor"><button class="sb" onclick="addToUncensor()">Add</button><div></div>
+                <script>
+                    document.getElementById("uncensorin").onkeydown = function(event) {
+                        if(event.keyCode == 13) addToUncensor();
+                    }
+                </script>
+                <select id="uncensor">
+                    <% data.db.uncensor.forEach(x=>{ %>
+                        <option value="<%= x %>"><%= x %></option>
+                    <% }) %>
+                </select>
+                <button class="sb" onclick="removeUncensor()">Remove</button>
+                <button class="sb" onclick="clearUncensor()">Clear All</button>
             </div>
             
         <div id="save" class="hide"> You have unsaved changes.  <button class="save" style="background-color: #2eb340" onclick="submit()">Save</button> </div>
@@ -284,25 +335,26 @@
         <button id="tr" class="but" onclick="logout()" style="grid-area: logout">Logout</button>
         </div>
         <script>
-            var isPremium = <%= premium %>
             document.querySelectorAll(".premium").forEach(function(elm) {
                 elm.onclick = function() {
                     // if(!isPremium) return alert("This is a premium feature!")
                 }
             })
         
-            if(!isPremium) {
-                document.querySelectorAll(".prem").forEach(function(elm) {
-                    elm.setAttribute("disabled", "");
-                });
+            document.getElementById("reslabel").onclick = function() {
+                if(!isPremium) premError()
             }
             document.querySelectorAll(".premb").forEach(function(elm) {
                 elm.onclick = function() {
                     window.open("/premium", "_blank")
                 }
             })
-        
-            document.getElementById("log").value = "<%= data.db.log %>"
+            
+            function premError() {
+                alert("This is a premium only feature")
+            }
+            
+            document.getElementById("log").value = "<%= data.db.log || "null"%>"
             document.getElementById("role").value = "<%= data.db.role || "null"%>"
             document.getElementById("punishrole").value = "<%= data.db.punishment.role || "null"%>"
             function request(endpoint, method, body, cb) {
@@ -325,6 +377,7 @@
                 request("/guilds/<%= data.id %>/settings", "POST", obj, function(x) {
                     if(x.error) return alert("Error: " + x.error);
                     if(x) {
+                        if(x.refresh) window.location.reload()
                         button.style["background-color"] = "#2eb340"
                         document.getElementById('save').classList.remove('show')
                         document.getElementById('save').classList.add('hide')
