--- a/api/website/pages/guilds.ejs
+++ b/api/website/pages/guilds.ejs
@@ -118,7 +118,7 @@
                             <% if(x.a) { %>
                                 <img class="guildPicture" src="https://cdn.discordapp.com/icons/<%= x.i%>/<%= x.a %>" alt="<%=x.n%>">
                             <% } else { %>
-                                <p class="guildText"><%= x.n.match(/\b(\w)/g).join("").toUpperCase() %></p>
+                                <p class="guildText"><%= (x.n.match(/\b(\w)/g) || []).join("").toUpperCase() %></p>
                             <% } %>
                             <span class="tooltiptext"><%= x.n %></span>
                         </div>
