--- a/api/website/astyle.css
+++ b/api/website/astyle.css
@@ -60,7 +60,7 @@
     grid-template-rows: repeat(4, 0.1fr);
     grid-template-areas:
       ". ptitle ptitle ."
-      ". ptoggle pamount ."
+      ". ptype pamount ."
       "prole prole prole prole";
     grid-gap: 0.5rem
 }
@@ -187,6 +187,10 @@ select {
   color: black;
 }
 
+.hidden {
+  display: none !important;
+}
+
 #tl, #tr {
   width: 100%;
   height: 60%;
@@ -275,6 +279,7 @@ select {
       ". censor censor censor ."
       ". popmsg popmsg popmsg ."
       ". filter filter filter ."
+      ". role role role ."
       ". uncensor uncensor uncensor ."
       ". resend resend resend ."
       ". channels channels channels . ";
